fixed the contact submit button misalignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -345,8 +345,8 @@ body {
 }
 
 @theme {
-  /* --anmate-spin: spin 10s ease-in-out infinite; */
-  @keyframes spin {
+  --animate-move: move 10s linear infinite;
+  @keyframes move {
   from { translate: 0; }
   to { translate: -100%; }
 }
